--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/css.css">
-    <title>Title (max 50 characters for SEO)</title>
+    <title>I changed the title</title>
 </head>
 <body>
 
